--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,43 +1,28 @@
-<div class="w-100" style="position: relative; float: left; height: auto">
-  <div
-    class="row justify-content-center bg-primary"
-    style="
-      height: 10vh;
-      height: 10vh;
-      position: relative;
-      float: left;
-      width: 100%;
-      margin: 0;
-    "
-  >
+<div class="w-100" style="position: relative; float: left; height: auto;">
+  <!-- main heading 10vh -->
+  <div class="row justify-content-center bg-primary" style="height: 10vh;height: 10vh;position: relative;float: left;width: 100%; margin: 0;">
+    <!--------------------------------------- logo -------------------------------------------------->
+    <!-- <a
+      [routerLinkActiveOptions]="{ exact: true }"
+      [routerLinkActive]="'active'"
+      routerLink="/home"
+    ><img
+      alt="pwc logo"
+      class="pt-2"
+      height="50"
+      src="../../assets/pwc_logo.png"
+      width="50"
+    /></a> -->
+
     <h2 class="text-white align-self-center pt-2">Field Assistance Tool</h2>
   </div>
-
-
-  
-  <div
-    class="row"
-    style="
-      height: auto;
-      position: relative;
-      float: left;
-      width: 100%;
-      margin: 0;
-      display: flex;
-    "
-  >
-   
-  
-  
-  
-  <div
-      *ngIf="(isLoggedIn$ | async) && (role$ | async) == 'Admin'"
-      class="col-2 nopadding nav-pane"
-      style="position: relative; float: left; height: auto; width: 16.666667%"
-    >
+  <!-- sub section 90vh -->
+  <div  class="row" style="height: auto; position: relative; float: left; width: 100%; margin: 0; display: flex;">
+    <!-- <div class="row" *ngIf="true" style="height: 90vh"> -->
+    <div *ngIf="(isLoggedIn$|async) && (role$|async) == 'Admin'" class="col-2 nopadding nav-pane" style="position: relative; float: left; height: auto; width: 16.666667%;">
       <div class="" style="height: 10vh">
         <div class="row justify-content-around align-items-center bg-white p-4">
-          <span>Welcome {{ firstName$ | async }}</span>
+          <span>Welcome {{firstName$ | async}}</span>
 
           <img
             alt="user icon"
@@ -48,61 +33,68 @@
           />
         </div>
       </div>
-
       <div class="p-3" style="height: 80vh">
         <ul class="list-group">
           <li class="mt-3">
-            <a [routerLinkActive]="'active'" [routerLink]="['/home']">Home</a>
+            <a
+             
+              [routerLinkActive]="'active'"
+              [routerLink]="['/home']"
+            >Home</a
+            >
           </li>
           <li class="mt-3">
             <a [routerLinkActive]="'active'" routerLink="user-access-management"
-              >User Access Management</a
+            >User Access Management</a
             >
           </li>
           <li class="mt-3">
             <a [routerLinkActive]="'active'" routerLink="master-data-management"
-              >Master Data Management</a
+            >Master Data Management</a
             >
           </li>
           <li class="mt-3">
             <a [routerLinkActive]="'active'" routerLink="manage-rating-forms"
-              >Manage Rating Form</a
+            >Manage Rating Form</a
             >
           </li>
           <li class="mt-3">
             <a [routerLinkActive]="'active'" routerLink="scheduler"
-              >Scheduler</a
+            >Scheduler</a
             >
           </li>
+          <!-- <li class="mt-3">
+            <a [routerLinkActive]="'active'" routerLink="dashboard"
+            >Dashboards</a
+            >
+          </li> -->
           <li class="mt-3">
             <a [routerLinkActive]="'active'" routerLink="download-reports"
-              >Download reports</a
+            >Download reports</a
             >
           </li>
           <li class="mt-3">
             <a [routerLinkActive]="'active'" routerLink="account-settings"
-              >Account settings</a
+            >Account settings</a
             >
           </li>
-          <li class="mt-3 mb-3">
-            <a class="text-white" (click)="logout()" style="cursor: pointer"
-              >Logout</a
+          <!-- <li class="mt-3">
+            <a [routerLinkActive]="'active'" routerLink="support"
+            >Contact Support</a
             >
+          </li> -->
+          <li class="mt-3 mb-3">
+            <a class="text-white" (click)="logout()" style="cursor: pointer;">Logout</a>
           </li>
         </ul>
       </div>
     </div>
-    <div
-      class="col nopadding"
-      style="
-        position: relative;
-        float: left;
-        height: 90vh;
-        flex: 1;
-        overflow-x: hidden;
-      "
-    >
+    <div class="col nopadding" style="position: relative; float: left; height: 90vh; flex: 1; overflow-x: hidden;">
       <router-outlet></router-outlet>
     </div>
   </div>
+  <!-- <div *ngIf="!(isLoggedIn$|async) || !((role$|async) == 'Admin')" class="col-3 m-auto">
+    
+    <app-login *ngIf="!authService.isLoggedIn"></app-login>
+  </div> -->
 </div>
